src/objects/GDMFSL_Maintenance_Template__c/GDMFSL_Maintenance_Template__c.object-meta.xml
<CustomObject>
    <label>Maintenance Template</label>
    <nameField>
        <label>Maintenance Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Maintenance Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>