src/objects/GDMFSL_Maintenance_Template__c/fields/GDMFSL_Asset__c.field-meta.xml
<CustomField>
    <fullName>GDMFSL_Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Maintenance Templates</relationshipLabel>
    <relationshipName>GDMFSL_Maintenance_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>