src/objects/GDMFSL_Maintenance_Template__c/fields/GDMFSL_Frequency_Type__c.field-meta.xml
<CustomField>
    <fullName>GDMFSL_Frequency_Type__c</fullName>
    <label>Frequency Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Yearly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>