src/objects/GDMFSL_Maintenance_Template__c/fields/GDMFSL_Product__c.field-meta.xml
<CustomField>
    <fullName>GDMFSL_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Maintenance Templates</relationshipLabel>
    <relationshipName>Maintenance_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>