src/objects/GDMFSL_Maintenance_Template__c/fields/GDMFSL_Recurrence_Type__c.field-meta.xml
<CustomField>
    <fullName>GDMFSL_Recurrence_Type__c</fullName>
    <description>.</description>
    <label>Recurrence Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Weekly On Day of Week</fullName>
            </value>
            <value>
                <fullName>Monthly On Day of Month</fullName>
            </value>
            <value>
                <fullName>Monthly On Nth Day of Week</fullName>
            </value>
            <value>
                <fullName>Yearly On Specific Date of a Month</fullName>
            </value>
            <value>
                <fullName>Yearly On Nth Day of Week of a Month</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>