src/objects/GDMFSL_Maintenance_Template__c/fields/GDMFSL_RRULE_Template__c.field-meta.xml
<CustomField>
    <fullName>GDMFSL_RRULE_Template__c</fullName>
    <formula>IF (ISPICKVAL( GDMFSL_Frequency_Type__c , &quot;Daily&quot;), &quot;FREQ=DAILY;INTERVAL=&quot;&amp; TEXT(GDMFSL_Frequency_Every_N__c),

IF (ISPICKVAL( GDMFSL_Frequency_Type__c , &quot;Weekly&quot;), &quot;FREQ=WEEKLY;BYDAY=TBD;INTERVAL=&quot;&amp; TEXT(GDMFSL_Frequency_Every_N__c),

IF (ISPICKVAL( GDMFSL_Recurrence_Type__c , &quot;Monthly On Day of Month&quot;), &quot;FREQ=MONTHLY;BYMONTHDAY=TBD;INTERVAL=&quot;&amp; TEXT(GDMFSL_Frequency_Every_N__c),

IF (ISPICKVAL( GDMFSL_Recurrence_Type__c , &quot;Monthly On Nth Day of Week&quot;), &quot;FREQ=MONTHLY;BYSETPOS=TBD;BYDAY=TBD;INTERVAL=&quot;&amp; TEXT(GDMFSL_Frequency_Every_N__c),

IF (ISPICKVAL( GDMFSL_Recurrence_Type__c , &quot;Yearly On Specific Date of a Month&quot;), &quot;FREQ=YEARLY;BYMONTH=TBD;BYMONTHDAY=TBD;INTERVAL=&quot;&amp; TEXT(GDMFSL_Frequency_Every_N__c),

IF (ISPICKVAL( GDMFSL_Recurrence_Type__c , &quot;Yearly On Nth Day of Week of a Month&quot;), &quot;FREQ=YEARLY;BYDAY=TBD;BYSETPOS=TBD;BYMONTH=TBD;INTERVAL=&quot;&amp; TEXT(GDMFSL_Frequency_Every_N__c), &quot;&quot;

)
)
)
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RRULE Template</label>
    <type>Text</type>
</CustomField>