src/objects/GDMFSL_Maintenance_Template__c/fields/GDMFSL_Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>GDMFSL_Sort_Order__c</fullName>
    <label>Sort Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>