src/objects/GDMFSL_Maintenance_Template__c/fields/GDMFSL_Work_Type__c.field-meta.xml
<CustomField>
    <fullName>GDMFSL_Work_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Type</label>
    <referenceTo>WorkType</referenceTo>
    <relationshipLabel>Maintenance Templates</relationshipLabel>
    <relationshipName>Maintenance_Templates1</relationshipName>
    <type>Lookup</type>
</CustomField>